After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736730 - gltestsrc: do not leak pool in error cases
gltestsrc: do not leak pool in error cases
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.4.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-16 09:45 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-09-17 07:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gltestsrc: do not leak pool in error cases (1.75 KB, patch)
2014-09-16 09:45 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-09-16 09:45:13 UTC
Created attachment 286274 [details] [review]
gltestsrc: do not leak pool in error cases

buffer pool is leaked in error cases
Comment 1 Sebastian Dröge (slomo) 2014-09-16 09:49:08 UTC
commit 66967bb203f2a4e507617ba7a1bc237be03e4898
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Tue Sep 16 11:41:43 2014 +0200

    gltestsrc: do not leak pool in error cases
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736730