gltestsrc: do not leak pool in error cases

https://bugzilla.gnome.org/show_bug.cgi?id=736730